fix: hero layout on mobile

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -2186,13 +2186,11 @@ input[type="submit"].form-control:focus {
   }
 }
 
-@media (max-width: 992px) {
-  #header-bar-1 {
-    .hb-content {
-      justify-content: center;
-    }
-  }  
-} // < 992px width
+#header-bar-1 {
+  .hb-content {
+    justify-content: space-between;
+  }
+}  
 
 
 @media (max-width: 768px) {
@@ -2628,8 +2626,8 @@ input[type="submit"].form-control:focus {
     .container {
       padding-left: 0;
 
-      a { 
-        margin-right: 2rem;
+      a + a { 
+        margin-left: 2rem;
       }
     }
   }
